<resources>
    <string name="app_name">theGreenRoom</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_type_of_user_are_you">What type of user are you?</string>
    <string name="venue">Venue</string>
    <string name="musician">Musician</string>
    <string name="gig_goer">Gig-goer</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="bio">Bio</string>
    <string name="edit_header_photo">edit header photo</string>
    <string name="edit_profile_picture">edit profile picture</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_location">Enter location</string>
    <string name="enter_bio">Enter bio</string>
    <string name="my_events">My Events</string>
    <string name="events_for_you">Events For You</string>
    <string name="event_photo">Event photo</string>
    <string name="at">\@</string>
    <string name="about">About</string>
    <string name="showcase">Showcase</string>
    <string name="schedule">Schedule</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="save_details">Save details</string>
    <string name="add_teaser_photo">Add teaser photo</string>
    <string name="description">Description</string>
    <string name="edit_about_section">Edit about section</string>
    <string name="create_an_event">Create an event</string>
    <string name="date">Date</string>
    <string name="save_event">Save event</string>
    <string name="time">Time</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_venue">Enter venue</string>
    <string name="title">Title</string>
    <string name="back_arrow">Back arrow</string>
    <string name="enter_time">Enter time</string>
    <string name="event_details">Event Details</string>
    <string name="event_name">Event Name</string>
    <string name="date_and_time">Date and time</string>
    <string name="add_to_showcase">Add to showcase</string>
    <string name="media">Media</string>
    <string name="add_media">Add media</string>
    <string name="post">Post</string>
    <string name="friends">friends</string>
    <string name="rating">rating</string>
    <string name="events">events</string>
    <string name="nothing_here_yet">Nothing here yet</string>
</resources>