<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#1e1e1e"
    android:paddingTop="54dp"
    android:paddingHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- header / banner photo -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/editHeaderPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/header_placeholder"
                android:contentDescription="@string/edit_header_photo" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/username"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="68dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="16sp"
            android:textColor="#EDEDE9" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:textColor="#EDEDE9"
            android:hint="@string/enter_username"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/location"
            android:layout_marginHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="16sp"
            android:textColor="#EDEDE9" />

        <EditText
            android:id="@+id/editLocation"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:textColor="#EDEDE9"
            android:hint="@string/enter_location"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/bio"
            android:layout_marginHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textSize="16sp"
            android:textColor="#EDEDE9" />

        <EditText
            android:id="@+id/editBio"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:textColor="#EDEDE9"
            android:hint="@string/enter_bio"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_save"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/save"
            android:textSize="16sp"
            android:backgroundTint="#878E76"
            android:textColor="#1C1C1A" />
    </LinearLayout>

    <!-- profile photo -->
    <androidx.cardview.widget.CardView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="74dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/editProfilePicture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_placeholder"
            android:contentDescription="@string/edit_profile_picture" />
    </androidx.cardview.widget.CardView>
</FrameLayout>