<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardBackgroundColor="#2B2D2A"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#EDEDE9" />

            <TextView
                android:id="@+id/venue_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/venue"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:textColor="#BABABA" />

            <TextView
                android:id="@+id/event_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_and_time"
                android:textSize="14sp"
                android:layout_marginTop="2dp"
                android:textColor="#878E76" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>